Fix form cutting off bug

--- a/index.css
+++ b/index.css
@@ -95,7 +95,8 @@ form {
   top: 50%;
   left: 50%;
   width: 90%;
-  height: 60%;
+  height: 50rem;
+  border-radius: 1rem;
   margin-top: -60%;
   margin-left: -45%;
   background-color: #eee;
